summative.moria.Moria.scala.code
while (!isFacingWall()) {
  forward();
  if (!isOverBaggle()) {
    
    pickupBaggle();
    right();
    right();
    
    while (!isOvegBaggel()) {
      forward();
    }
    
    backward();
    dropBaggle();
    right();
    right();
  }
}

right();
forward();
left();
forward();
forward();